@@ -1,4 +1,5 @@
 //> using scala 3.7.4
 //> using resourceDir "./resources"
 //> using javaOpt "-Djava.library.path=./lib"
+//> using javaOpt "--enable-native-access=ALL-UNNAMED"
 //> using jmh
